# TripleMixPrng

./: .criterion-hypothesis.toml  .gitignore  Cargo.toml  README.md  avalanche_out.txt  bit_corr_out.txt  byte_freq_out.txt  error.txt  final_test_out.txt  matrix_rank_out.txt  test_api.rs  test_results.txt  test_shake.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  devskim.yml  rust.yml  scorecards.yml
benches/: benchmarks.rs
dev/bench/: data.js
examples/: endless_bytes.rs  finite_bytes.rs
examples/common/: mod.rs
proptest-regressions/: generate.txt  lib.txt
src/: avx2.rs  generate.rs  jump.rs  lib.rs  main.rs  reproducibility.rs  seed.rs  serde.rs  x86.rs  zeroize.rs
tests/: diffusion_test.rs
