[package]
name = "triple_mix_prng"
version = "0.1.0"
edition = "2024"

[dependencies]
rand_core = "0.10.0"
rand = "0.10.0"
genetic_algorithm = "0.27.0"
log = "0.4.29"
simple-log = "2.4.0"
hypors = "0.3.0"
statrs = "0.18.0"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3