[package]
name = "rand_triplemix"
version = "0.1.0"
edition = "2024"

[dependencies]
rand_core = "0.10"
generic-array = "1.3"
tiny-keccak = { version = "2.0", features = ["kmac", "sha3"] }
const_format = "0.2"
bytemuck = { version = "1.25.0", features = ["nightly_portable_simd"] }
typenum = { version = "1.19", features = ["const-generics"] }
rdrand = { version = "0.8", optional = true }
tss-esapi = { version = "7.6", optional = true }
aws-lc-rs = { version = "1.16", optional = true }
serde = { version = "1.0", optional = true }
zeroize = { version = "1.8", optional = true }
once_cell = { version = "1.21.3", optional = true, default-features = false }

[features]
zeroize = ["zeroize/zeroize_derive"]
serde = ["serde/serde_derive"]
no_std = ["once_cell/race"]

[[bin]]
name = "rand_triplemix"
required-features = ["aws-lc-rs"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3

[dev-dependencies]
hypors = "0.3.0"
statrs = "0.18.0"
criterion = "0.8.2"
gf2 = "2.1.0"
itertools = "0.14.0"