[package]
name = "rand_triplemix"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Pseudorandom number generator that's faster than ChaCha12Rng and has a 1.99*2<sup>382</sup>-block period"

[dependencies]
rand_core = "0.10"
generic-array = "1.3"
tiny-keccak = { version = "2.0", features = ["kmac", "sha3"] }
const_format = "0.2"
bytemuck = { version = "1.25.0", features = ["nightly_portable_simd"] }
typenum = { version = "1.19", features = ["const-generics"] }
rdrand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
zeroize = { version = "1.8", optional = true }
once_cell = { version = "1.21.3", optional = true, default-features = false }

[features]
zeroize = ["zeroize/zeroize_derive"]
serde = ["serde/serde_derive"]
no_std = ["once_cell/race", "once_cell/alloc"]
bench_include_threadrng = []

[lib]
bench = false  # Suppress use of libtest harness, since we're using criterion

[[bench]]
name = "benchmarks"
harness = false  # Suppress use of libtest harness, since we're using criterion

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3

[dev-dependencies]
hypors = "0.3.0"
statrs = "0.18.0"
criterion = "0.8"
rand = "0.10.0"
gf2 = "2.1.0"
itertools = "0.14.0"
aws-lc-rs = "1.16"
proptest = { version = "1.10.0", features = ["unstable"] }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
criterion-cycles-per-byte = "0.8"